# urisc

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: ALU.cpp  ALU.hpp  Add.cpp  Add.hpp  BankRegister.cpp  BankRegister.hpp  Constants.hpp  Control.cpp  Control.hpp  ControlJump.cpp  ControlJump.hpp  Main.cpp  Memory.cpp  Memory.hpp  Mux.cpp  Mux.hpp  Util.cpp  Util.hpp
test/: teste10  teste10.asm  teste14  teste61  teste61.asm
